Frontend/src/css/animePage.css
* {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    box-sizing: border-box;
}

body {
    width: 100%;
    background: black;
    color: white;
    overflow-x: hidden;
}

img {
    width: 100%;
}


/* ------- Navigation Bar ------- */

.logo {
    width: 200px;
    min-width: 175px;
    margin-left: 20px;
    margin-right: 30px;
    margin-top: 5px;
    float: left;
}

.nav {
    background-color: #333333;
    position: fixed;
    width: 100%;
    top: 0;
    left: 0;
    height: 80px;
    font-size: 20 px;
    font-weight: bold;
    z-index: 2;
}

.nav a {
    color: white;
    text-transform: uppercase;
    text-decoration: none;
    padding: 25px 15px;
}

.main-links {
    display: inline-block;
    line-height: 80px;
}

.nav a:hover {
    color: purple;
}

#bell {
    display: inline-block;
    line-height: 80px;
    width: 50px;
    height: 50px;
    margin-right: auto;
    padding-top: 10px;
    padding-right: 50px;
}

.icon-button {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 50px;
    height: 50px;
    color: #333333;
    background: #dddddd;
    border: none;
    outline: none;
    border-radius: 50%;
}

.icon-button:hover {
    cursor: pointer;
}

.icon-button:active {
    background: #cccccc;
}

.icon-button__badge {
    position: absolute;
    top: 0px;
    right: -10px;
    width: 25px;
    height: 25px;
    background: red;
    color: #ffffff;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 50%;
}

.hide {
    visibility: hidden;
}


.account ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    background: #333333;
}

.account li {
    display: inline-block;
}

.account li a {
    color: white;
    display: block;
    text-decoration: none;
}

/* Style the dropdown menu */
.account ul ul {
    position: absolute;
    top: 100%;
    display: none;
}

.account ul ul li {
    display: block;
}

.account li:hover ul {
    display: block;
}

/* Change the background color of dropdown links on hover */
.account ul ul li a:hover {
    background-color: #555;
}


.main-links {
    float: left;
}

.account {
    float: right;
    margin-right: 10px;
    width: 200px;
}

/* ------- Main Content  ------- */

#flex-container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    width: 100%;
    height: 100%;
    padding-top: 100px;
    border: none;
}

/* ------- Left side banner  ------- */

.leftImage {
    width: 20%;
    position: fixed;                        /* Currently Sailor Moon */
    bottom: 10%;
    left: 1%;
}

@keyframes floating {
    0% {
        transform: translateY(0);
    }
    50% {
        transform: translateY(-10px);
    }
    100% {
        transform: translateY(0);
    }
}

.floating-image {
    animation: floating 3s ease-in-out infinite;
}

/* ------- Right side banner  ------- */

.rightImage {
    width: 25%;
    position: fixed;                        /* Currently Chibi */
    right: -3%;
    top: 20%;
}

/* ------- Center Div, Holds All Anime Info Content  ------- */

#main {
    background: black;
    width: 60%;
    height: 100%;
    margin: auto;                               /* Div holding all the content below */
    z-index: 1;
    position: relative;
}

hr {
    background-color: purple;
    height: 3px;                                /* Horizontal line and style */
    border: none;
    margin-bottom: 10px;
}

.back {
    height: fit-content;
    width: 100%;                                /* 'Back to Search' button */
    margin-left: 30px;
    margin-top: 20px;
    display: block;
}

.back a {
    text-decoration: none;
    color: plum;                             /* 'Back to Search' button styles */
    text-transform: uppercase;
    font-weight: bold;
}

.back a:hover {
    color: silver;
}

.image-box {
    width: 18%;                                 /* Div that holds the image of the Anime */
    margin: 40px 30px;
    height: fit-content;
    display: inline-block;
}

.image-box img {
    margin: auto;                               /* Style of the image itself */
    border: 2px solid white;
}

.anime-links {
    width: 100%;
    margin: auto;                               /* "Add to Favorites" */
    padding-top: 15px;
    text-align: center;
}

.anime-links a {
    color: plum;
    font-weight: bold;                          /* "Add to Favorites" style */
    text-decoration: none;
}

.anime-info {
    width: 70%;
    margin-left: 20px;
    padding: 10px;                            /* Div that holds the title, description, and other anime content */
    height: fit-content;
    display: inline-block;
    position: relative;
}

.anime-info h1 {
    margin: 0;                                 /* Style of Title */
}

.info-dos {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
}

.ratings {
    background: purple;
    text-align: center;
    width: fit-content;                        /* Div holding the Ratings Number */
    padding: 10px 20px;
    margin: auto 10px;
    display: inline-block;
    border-radius: 10px;
}

.addl-info {
    width: 250px;
    min-height: 120px;
    height: fit-content;
    /* display: inline-block; */
    margin: 10px 10px;
    padding-right: 5px;                     /* Div holding the Air Date, Genres, Episodes */
    padding-left: 30px;
    border: 2px purple double;
    border-radius: 10px;
}

.addl-info-2 {
    width: 250px;
    min-height: 120px;
    height: fit-content;
    /* display: inline-block;                      Div holding the Popularity, Seasons, Value */
    margin: 10px 10px;
    padding-right: 5px;
    padding-left: 30px;
    border: 2px purple double;
    border-radius: 10px;
    height: 100px;
}

.hide {
    display: none;                              /* Class name created to hide specfic data until an event happens */
}

.reviews {
    width: 80%;
    padding: 10px;
    margin: 50px auto;
    border-radius: 10px;
    position: relative;
}

#create-box {
    text-align: center;
    margin: auto;
    padding: 20px;
    width: 80%;
    font-weight: bold;
    border: 2px double #333333;
    border-radius: 10px;
}

textarea {
    margin: 20px;
}

#submit-review {
    background: plum;
}

#submit-review:hover {
    background: purple;
}

#post-submit {
    color: rgb(74, 219, 74);
}

button {
    background: purple;
    color: white;
    display: block;
    position: relative;
    text-align: center;
    text-decoration: none;
    font-weight: bold;
    border: none;
    border-radius: 5px;
    width: 100%;
    height: 20px;
}

button:hover {
    cursor: pointer;
    background: silver;
}

.reccomended-anime {
    width: 80%;
    margin: auto;
}

.anime-container {
    display: flex;
    overflow-x: scroll;
    gap: 25px;
    height: 335px;
    margin: 20px;
}

.anime-cover-title {
    display: block;
    align-items: center;
    width: 220px;
    flex-shrink: 0;
}

.title {
    top: 0;
    bottom: 0;
    background: rgba(29, 106, 154, 0.72);
    color: #fff;
    opacity: 0;
    transition: opacity .2s, visibility .2s;
}

.anime-container:hover .cover-image h5 {
    opacity: 1;
}

.rating-box{
    text-align: center;
    /* Div holding the Ratings Number */
    padding: 10px 10px;
    margin-right: 0.1vw;
    display: inline-block;
}

.user-review{
    display: flex;
    margin: 40px;
    border: 2px solid silver;
    border-radius: 10px;
    height: fit-content;
    margin-bottom: 1vw;
    justify-content: space-between;
}

.comment{
    width: 100%;
    text-align: left;
    justify-items: left;
    margin-bottom: 30px;
    word-wrap: break-word;
    max-height: 50px;
    font-size: 14px;
    color: floralwhite;
}

.pfp{
    max-height: 60px;
    max-width: 60px;
    border-radius: 50%;
    margin: auto 10px;
}

.display-name{
    margin: 5px;
    color: gray;
    text-decoration: none;
}

.user-profile{
    max-width: 100px;
    display: inline-flex;
}

.middleBlock{
    width: 75%;
    margin: 5px;
    padding: 5px;
}

.misc{
    display: flex;
    gap: 0.2vw;
    align-items: center;
    margin: 5px;
}
.like-button{
    width: 30px;
    height: 30px;
    background: black;
    justify-self: center;
    color: green;
}

.like-button-img{
    position: relative;
}

.like-number{
    font-size: 15px;
    position: relative;
}

.dislike-button{
    width: 30px;
    height: 30px;
    background: black;
    justify-self: center;
}

.dislike-button-img{
    padding-top: 1px;
    position: relative;
}

#charCounter {
    float: right;
    margin-right: 20px;
    margin-bottom: 20px;
}

